--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.13.3",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
-    "npm": "^7.20.2"
+    "npm": "^7.20.2",
+    "xss": "^1.0.9"
   }
 }
